tdf#163149 sw smart justify: fix line shrinking at image wrapping

Limited line width at image wrap could result negative nSpaceAdd
value, i.e. paragraph line with extra letter spacing instead of
line shrinking.

Regression from commit 17eaebee279772b6062ae3448012133897fc71bb
"tdf#119908 sw smart justify: fix justification by shrinking".

Change-Id: I76cc3004d246ff7af441ca9a92eaa8fc7b09f01b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174985
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>